[gd_scene load_steps=12 format=3 uid="uid://8vq475iel8pb"]

[ext_resource type="Script" path="res://scripts/network_manager.gd" id="1_vjgd7"]
[ext_resource type="PackedScene" uid="uid://cer020f54fwnj" path="res://scenes/player.tscn" id="2_xa4f0"]
[ext_resource type="Script" path="res://scripts/spot_light_3d.gd" id="3_2wysb"]
[ext_resource type="Script" path="res://scripts/server_menu.gd" id="3_3v8dj"]
[ext_resource type="Script" path="res://scripts/server_connect_button.gd" id="3_aufbq"]
[ext_resource type="PackedScene" uid="uid://b054yrndyyhyx" path="res://scenes/environment.tscn" id="6_ii8w1"]
[ext_resource type="PackedScene" uid="uid://ufh5bg2edko8" path="res://scoop.fbx" id="7_erhes"]
[ext_resource type="Script" path="res://scripts/scoop.gd" id="8_rrg8s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_peehw"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_8ae0n"]
size = Vector3(48, 1, 27)

[sub_resource type="BoxShape3D" id="BoxShape3D_7ejrd"]
size = Vector3(2, 1, 2)

[node name="Main" type="Node"]

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("1_vjgd7")

[node name="Player" parent="." instance=ExtResource("2_xa4f0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00593543, 0, 0.0861781)

[node name="Floor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1.00506, 0, 0, 0, 1.00506, 0, 0, 0, 1.00506, 0, 0, 0)
shape = SubResource("BoxShape3D_peehw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_8ae0n")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50.148, -0.482112)
projection = 1
size = 26.3697

[node name="Server Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_3v8dj")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Server Menu"]
top_level = true
layout_mode = 0
offset_left = 13.0
offset_top = 577.0
offset_right = 289.0
offset_bottom = 635.0

[node name="VBoxContainer" type="VBoxContainer" parent="Server Menu/AspectRatioContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Server Menu/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Input Server Adress"

[node name="HBoxContainer" type="HBoxContainer" parent="Server Menu/AspectRatioContainer/VBoxContainer"]
layout_mode = 2

[node name="Address Input" type="LineEdit" parent="Server Menu/AspectRatioContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "IPv4 Address"

[node name="Button" type="Button" parent="Server Menu/AspectRatioContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"
script = ExtResource("3_aufbq")

[node name="Environment" parent="." instance=ExtResource("6_ii8w1")]
transform = Transform3D(1.00562, 0, 0, 0, 1.00562, 0, 0, 0, 1.00562, -0.118774, 0.195028, -0.418333)

[node name="Scoop" type="Node3D" parent="."]
transform = Transform3D(1.50141, 0, 0, 0, 1.00094, 0, 0, 0, 1.00094, 0, 5.03, 0)
script = ExtResource("8_rrg8s")

[node name="3Dmodel" parent="Scoop" instance=ExtResource("7_erhes")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00747681, 0.0987549, -0.104004)
visible = false

[node name="Area3D" type="Area3D" parent="Scoop"]
transform = Transform3D(0.999616, 0, 0, 0, 0.999616, 0, 0, 0, 0.999616, 0, -0.89142, 0)

[node name="ClawCollider" type="CollisionShape3D" parent="Scoop/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0324707, 0.0848389, -0.100224)
shape = SubResource("BoxShape3D_7ejrd")

[node name="outline" type="Sprite3D" parent="Scoop"]
transform = Transform3D(0.348871, 0, 0, 0, 0.583032, 0, 0, 0, -0.523406, 0, 0, 0)
axis = 1

[node name="icon" type="Sprite3D" parent="Scoop"]
transform = Transform3D(0.18758, 0, 0, 0, 0.341416, 0, 0, 0, 0.275154, 0, 0, 0)
pixel_size = 0.02
axis = 1

[node name="Label" type="Label3D" parent="Scoop"]
transform = Transform3D(2.8161, 0, 0, 0, -2.62116e-07, 2.95427, 0, -5.99653, -1.29135e-07, 0.999999, 0, 0.999999)
text = "TEST"

[node name="Light" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Light"]
transform = Transform3D(-0.999974, 9.62315e-08, -0.0071558, -0.00171772, 0.970758, 0.240053, 0.00694657, 0.240059, -0.970733, 0.226, 11.4781, 0)
light_energy = 0.5

[node name="SpotLight3D" type="SpotLight3D" parent="Light"]
transform = Transform3D(-0.999974, 8.77334e-08, -0.00715579, -0.00715579, -4.30847e-08, 0.999974, 8.74228e-08, 1, 4.37114e-08, 0.226, 5.75551, 0)
light_energy = 2.0
spot_range = 15.544
spot_angle = 13.0
script = ExtResource("3_2wysb")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Light"]

[connection signal="connection_status_schanged" from="NetworkManager" to="Server Menu" method="_on_network_manager_connection_status_schanged"]
[connection signal="rat_pos_recieved" from="NetworkManager" to="Player" method="_on_network_manager_rat_pos_recieved"]
[connection signal="init_connection" from="Server Menu" to="NetworkManager" method="_on_init_connection"]
[connection signal="text_submitted" from="Server Menu/AspectRatioContainer/VBoxContainer/HBoxContainer/Address Input" to="Server Menu" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Server Menu/AspectRatioContainer/VBoxContainer/HBoxContainer/Button" to="Server Menu" method="_on_button_pressed"]
[connection signal="spot_position_changed" from="Light/SpotLight3D" to="NetworkManager" method="_on_spot_light_3d_spot_position_changed"]
